# storage/api-docs/api-docs.json
@@ -956,7 +956,12 @@
                     "401": {
                         "description": "Unauthenticated"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerToken": []
+                    }
+                ]
             }
         },
         "/Item/InsertItem": {
